[tool.poetry]
name = "plai-py"
version = "0.1.0"
description = ""
authors = ["neverix <nev@neverix.io>"]

[tool.poetry.dependencies]
python = "^3.7"
PyAutoGUI = "^0.9.53"
pywinctl = "^0.0.38"
appdirs = "^1.4.4"
requests = "^2.28.1"
tqdm = "^4.64.0"
torch = "1.7.0"
gym = "0.19"
opencv-python = "4.4.0.44"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
